# AMVerge-CLI

./: .gitignore  AGENTS.md  LICENSE  OPENCODE.md  README.md  TODO.md  pyproject.toml
amverge/: __init__.py  cli.py  pipeline.py  wizard.py
amverge/commands/: about.py  backend.py  bench.py  cache.py  detect.py  export.py  keyframes.py  merge.py  probe.py  rpc_server.py  scenes.py  usage.py
amverge/commands/about/: changelog.py  credits.py  usage.py
amverge/commands/dedup/: dedup.py
amverge/commands/detection/: bench.py  cache.py  detect.py  keyframes.py  scenes.py
amverge/commands/export/: export.py  merge.py
amverge/commands/info/: info.py  probe.py
amverge/commands/interpolation/: flowframes.py  flowframes_path.py  interpolate.py
amverge/commands/sidecar/: backend.py  rpc_server.py
amverge/commands/system/: doctor.py  gpu.py  version.py
amverge/commands/upscaling/: models.py  upscale.py
amverge/core/: __init__.py  binaries.py  codec_utils.py  diagnostics.py  discord_rpc.py  hevc.py  image.py  image_crop.py  ipc.py  keyframe_align.py  probe_utils.py  scene_cache.py  scene_detection.py  scene_utils.py  segmenter.py  similarity.py  smart_cut.py  thumbnails_streaming.py  transnet_config.py
amverge/core/codec/: __init__.py  codec_utils.py
amverge/core/cutting/: __init__.py  segmenter.py  smart_cut.py
amverge/core/dedup/: __init__.py  _encode.py  dedup_advanced.py  dedup_ffmpeg.py  dedup_framediff.py  dedup_ssim.py  dispatch.py
amverge/core/detection/: __init__.py  ai_scene_detection.py  nelux_runtime.py  scene_detection.py
amverge/core/discord/: __init__.py
amverge/core/image/: __init__.py
amverge/core/infra/: __init__.py  binaries.py  config.py  diagnostics.py  ffmpeg_bootstrap.py
amverge/core/interpolation/: __init__.py  engine.py  flowframes.py  registry.json  registry.py  rife_arch.py  weight_loader.py
amverge/core/keyframes/: __init__.py  keyframe_align.py  keyframes.py
amverge/core/similarity/: __init__.py  similarity.py
amverge/core/thumbnails/: __init__.py  thumbnails.py  thumbnails_streaming.py
amverge/core/transnet/: __init__.py  transnet_constants.py
amverge/core/upscaling/: __init__.py  anime4k.py  artcnn.py  engine.py  ffmpeg_helpers.py  monitor.py  registry.json  registry.py  shufflecugan.py  upscale.py  weight_loader.py
amverge/core/video/: __init__.py  probe_utils.py  scene_utils.py  video.py
amverge/core/wrappers/: __init__.py  amverge_video.py  image_crop.py  scene_cache.py  scene_detector.py  scene_exporter.py  similarity_checker.py  thumbnail_generator.py  transnet_config.py
amverge_cli/: cli.py  ui.py  wizard.py
amverge_cli/commands/: about.py  changelog.py  credits.py  export.py  merge.py  usage.py
amverge_cli/core/: binaries.py  hevc.py  image.py  keyframes.py  similarity.py  thumbnails.py
amverge_cli/core/detection/: __init__.py  edge.py  (+1 more)
docs/: ai-setup.md  cli-reference.md  contributing.md  detection-methods.md  installation.md  library.md  registry.md
examples/: README.md
examples/custom-pipeline/: README.md
examples/cutting/: 01_smart_cut.py  README.md
examples/detect/: README.md
examples/diagnostics/: 01_gpu_check.py  02_version_info.py  README.md
examples/discord-rpc/: 01_basic_rpc.py  README.md
examples/export/: 02_reencode_export.py  README.md
examples/info-probe/: README.md
examples/interpolation/: 01_flowframes_interpolate.py  02_rife_interpolate.py  README.md
examples/keyframes/: README.md
examples/similarity/: README.md
examples/thumbnails/: README.md
examples/upscale/: 01_ml_upscale.py  02_anime4k_upscale.py  03_manage_models.py  README.md
