[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amverge"
version = "0.1.0"
description = "AMVerge Features as a CLI Tool and Python Library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "av>=12",
    "pillow>=10",
    "numpy>=1.26",
]

[project.scripts]
amverge = "amverge.cli:app"

[project.optional-dependencies]
edge    = ["opencv-python-headless>=4.9"]
discord = ["pypresence>=4.3"]
dev     = ["pyinstaller>=6"]

[tool.hatch.build.targets.wheel]
packages = ["amverge"]
