[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amverge"
version = "0.2.1"
description = "AMVerge Features as a CLI Tool and Python Library"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Moongetsu", email = "moongetsu1@gmail.com", url = "https://github.com/moongetsu" },
]
maintainers = [
    { name = "Moongetsu", email = "moongetsu1@gmail.com", url = "https://github.com/moongetsu" },
    { name = "Crptk", url = "https://github.com/crptk" },
]
keywords = [
    "amverge", "scene-detection", "video", "transnetv2",
    "keyframe", "ffmpeg", "clip-management", "anime", "video-editing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
urls = { repository = "https://github.com/AMVerge-team/AMVerge-CLI" }
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "av>=12",
    "pillow>=10",
    "numpy>=1.26",
]

[project.scripts]
amverge = "amverge.cli:app"

[project.optional-dependencies]
ml      = ["torch>=2.0", "transnetv2-pytorch", "tqdm>=4.0"]
edge    = ["opencv-python-headless>=4.9"]
discord = ["pypresence>=4.3"]
upscale = ["torch>=2.0", "opencv-python-headless>=4.9", "spandrel>=0.3", "onnxruntime>=1.16"]
all     = ["torch>=2.0", "transnetv2-pytorch", "tqdm>=4.0", "opencv-python-headless>=4.9", "pypresence>=4.3", "spandrel>=0.3", "onnxruntime>=1.16"]
dev     = ["pyinstaller>=6"]

[tool.hatch.build.targets.wheel]
packages = ["amverge"]
include = [
    "assets/*",
    "examples/**/*.py",
    "examples/**/*.md",
    "docs/*.md",
    "amverge/core/upscaling/registry.json",
]
